# cpu-benchmark

./: CMakeLists.txt  README.md
cmake/: release_build.cmake
src/: auto_size.cpp  auto_size.hpp  benchmark_core.cpp  benchmark_core.hpp  benchmark_output.hpp  cache_benchmark.hpp  cache_level_sizes.hpp  cli.hpp  comparison_output.hpp  compute_benchmark.hpp  cpu_capabilities.hpp  fp4.hpp  half.hpp  kernel_dispatcher.hpp  main.cpp  math_kernels.hpp  math_kernels_extended.hpp  memory_validator.cpp  memory_validator.hpp  persistent_thread_pool.cpp  persistent_thread_pool.hpp  platform.cpp  platform.hpp  precision_dispatcher.hpp  progress_reporter.cpp  progress_reporter.hpp  reference_comparison.hpp  reference_data.hpp  result_submission.cpp  result_submission.hpp  runtime_dispatcher.cpp  runtime_dispatcher.hpp  score_calculator.cpp  score_calculator.hpp  simd_kernels.hpp  thread_affinity.cpp  thread_affinity.hpp  threading.cpp  threading.hpp  types.hpp  (+3 more)
src/kernels/: kernel_avx.cpp  kernel_avx2.cpp  kernel_avx512.cpp  kernel_common.hpp  kernel_compute.cpp  kernel_compute.hpp  kernel_compute_avx512.cpp  kernel_neon.cpp  kernel_scalar.cpp  kernel_sse2.cpp
